News
====

.. contents::

svn trunk
---------

* ``paste.httpheaders.CONTENT_RANGE`` returns ``bytes
  START-END/LENGTH`` instead of just ``START-END/LENGTH``

* In ``paste.fixture.TestApp`` set ``CONTENT_TYPE`` to
  ``'application/x-www-form-urlencoded'`` whenever there are
  parameters (and no other content type was provided).

1.4.2
-----

* Remove FreeBSD threadpool condition in paste.httpserver (which was
  also breaking code for Windows users).

* Fix problem with ``paste.wsgilib.intercept_output`` and passing up
  exceptions.

1.4.1
-----

* Allow customization of the ``paste.config.ConfigMiddleware`` environ
  key.

* Added a ``current`` method (an alias of ``current_conf``) to
  ``paste.config.DispatchingConfig``.

* Make test response ``.form`` attribute work when you have a single
  named form.

* Try to encode any unicode input to ``paste.auth.auth_tkt``

* ``paste.wsgiwrappers.WSGIResponse`` now has a ``.content_type``
  attribute (that does not include parameters), and a ``.charset``
  attribute (that gets the charset parameter).

* Inherit inherit show_exceptions_in_wsgi_errors from global
  configuration.  Inherit ``debug`` more properly.

1.4
---

* In ``paste.httpserver`` added lots of functionality to the
  threadpool.  See `the paste.httpserver threadpool documentation
  <paste-httpserver-threadpool.html>`_ for details.  This catches
  worker threads (and WSGI apps) that take too long to complete their
  task; killing them eventually, adding more worker threads when the
  pool is exhausted and it doesn't look good that it'll clear soon,
  and optionally killing the process when there are too many
  lost/zombie threads (you must be using some kind supervisor process
  for this last response to make sense).

* Save host and scheme information during real HTTP proxy requests to
  ``paste.httpserver``, into the keys
  ``paste.httpserver.proxy.scheme`` and
  ``paste.httpserver.proxy.host``
